# jackpot-sol

jackpot/: Anchor.toml  Cargo.toml  buffer-keypair.json  package.json  tsconfig.json
jackpot/programs/jackpot/: Cargo.toml
jackpot/programs/jackpot/src/: lib.rs
jackpot/scripts/: deposit.ts  game.ts  initialize.ts  start.ts  withdrawPot.ts
jackpot/tests/: jackpot.ts
