[package]
name = "jackpot"
version = "0.1.0"
description = "Simple jackpot game, built on Solana blockchain."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jackpot"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
solana-program = "1.18.26"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
dotenvy = "0.15.7"
